@@ -375,13 +375,25 @@ sub check_for_ACE_SYNCH_MUTEX ()
 }
 
 # This test checks for not having export files in CIAO, all have to be ---
-# generated using TAO_IDL
+# generated using TAO_IDL. If you have a file that must be in the repository
+# remove the generated automatically by line
 sub check_for_export_file ()
 {
     print "Running export file check\n";
     ITERATION: foreach $file (@files_h) {
-        if (($file =~ /.*CIAO.*export.h/)) {
-            print_error ("$file:$.: found should be generated by TAO_IDL, check -Gx** option");
+        if (($file =~ /.*CIAO.*export.h/) || ($file =~ /.*DAnCE.*export.h/)) {
+          if (open (FILE, $file)) {
+            print "Looking at file $file\n" if $opt_d;
+            while (<FILE>) {
+              if (/generated automatically by/) {
+                print_error ("$file:$.: found should be generated by TAO_IDL, check -Gxh** option");
+              }
+            }
+            close (FILE);
+          }
+          else {
+            print STDERR "Error: Could not open $file\n";
+          }
         }
     }
 }
@@ -598,167 +610,167 @@ sub check_for_lack_ACE_OS ()
                     if($file !~ /.c$/ && $file !~ /S.cpp$/ && $file !~ /S.inl$/ && $file !~ /C.cpp$/ && $file !~ /C.inl$/) {
                         if($file !~ /OS_NS_arpa_inet/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_arpa_inet_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_arpa_inet.h");
                             }
                         }
                         if($file !~ /OS_NS_ctype/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_ctype_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_ctype.h");
                             }
                         }
                         if($file !~ /OS_NS_dirent/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_dirent_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_dirent.h");
                             }
                         }
                         if($file !~ /OS_NS_dlfcn/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_dlfcn_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_dlfcn.h");
                             }
                         }
                         if($file !~ /OS_NS_errno/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_errno_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_errno.h");
                             }
                         }
                         if($file !~ /OS_NS_fcntl/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_fcntl_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_fcntl.h");
                             }
                         }
                         if($file !~ /OS_NS_math/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_math_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_math.");
                             }
                         }
                         if($file !~ /OS_NS_netdb/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_netdb_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_netdb.h");
                             }
                         }
                         if($file !~ /OS_NS_poll/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_netdb_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_poll.h");
                             }
                         }
                         if($file !~ /OS_NS_pwd/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_pwd_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_pwd.h");
                             }
                         }
                         if($file !~ /OS_NS_regex/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_regex_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_regex.h");
                             }
                         }
                         if($file !~ /OS_NS_signal/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_signal_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_signal.h");
                             }
                         }
                         if($file !~ /OS_NS_stdlib/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_stdlib_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_stdlib.h");
                             }
                         }
                         if($file !~ /OS_NS_stdio/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_stdio_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_stdio.h");
                             }
                         }
                         if($file !~ /OS_NS_string/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_string_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_string.h");
                             }
                         }
                         if($file !~ /OS_NS_strings/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_strings_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_strings.h");
                             }
                         }
                         if($file !~ /OS_NS_stropts/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_stropts_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_stropts.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_mman/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_mman_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_mman.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_msg/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_msg_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_msg.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_resource/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_resource_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_resource.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_select/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_select_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_select.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_sendfile/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_sendfile_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_sendfile.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_shm/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_shm_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_shm.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_socket/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_socket_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_socket.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_stat/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_stat_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_stat.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_time/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_time_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_time.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_uio/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_uio_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_uio.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_utsname/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_utsname_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_utsname.h");
                             }
                         }
                         if($file !~ /OS_NS_sys_wait/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_sys_wait_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_sys_wait.h");
                             }
                         }
                         if($file !~ /OS_NS_Thread/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_Thread_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_Thread.h");
                             }
                         }
                         if($file !~ /OS_NS_time/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_time_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_time.h");
                             }
                         }
                         if($file !~ /OS_NS_unistd/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_unistd_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_unistd.h");
                             }
                         }
                         if($file !~ /OS_NS_wchar/) {
                             if(/(\s+:{0,2}|\(:{0,2}|\s*!:{0,2}|^|\):{0,2})($OS_NS_wchar_symbols)\s*\(/ and $` !~ /\/\// and $` !~ /\/\*/ and $` !~ /\*\*+/ and $` !~ /\s+\*+\s+/) {
-                                print_error ("$file:$.: missing ACE_OS");
+                                print_error ("$file:$.: missing ACE_OS use ace/OS_NS_wchar.h");
                             }
                         }
                     }
@@ -2138,6 +2150,7 @@ if ($opt_t) {
 print "--------------------Configuration: Fuzz - Level ",$opt_l,
       "--------------------\n";
 
+check_for_export_file () if ($opt_l >= 4);
 check_for_trailing_whitespace () if ($opt_l >= 4);
 check_for_lack_ACE_OS () if ($opt_l >= 6);
 check_for_ACE_Guard () if ($opt_l >= 1);
@@ -2179,7 +2192,6 @@ check_for_long_file_names () if ($opt_l >= 1);
 check_for_improper_main_declaration () if ($opt_l >= 1);
 check_for_TAO_Local_RefCounted_Object () if ($opt_l >= 1);
 check_for_ORB_init () if ($opt_l >= 1);
-check_for_export_file () if ($opt_l >= 6);
 
 print "\nfuzz.pl - $errors error(s), $warnings warning(s)\n";
 
